--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -140,7 +140,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/custom_white_input_edit_text"
                     android:fitsSystemWindows="false"
-                    android:hint="@string/old_password"
+                    android:hint="@string/new_password"
                     android:inputType="textPassword"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -168,7 +168,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/bhu12"
-                    android:hint="@string/old_password"></com.google.android.material.textfield.TextInputEditText>
+                    android:hint="@string/re_enter_new_password"></com.google.android.material.textfield.TextInputEditText>
             </com.google.android.material.textfield.TextInputLayout>
 
 
