--- a/app/src/main/res/layout/menu_vol.xml
+++ b/app/src/main/res/layout/menu_vol.xml
@@ -138,6 +138,7 @@
                     android:textStyle="bold" />
             </RelativeLayout>
             <RelativeLayout
+                android:visibility="gone"
                 android:id="@+id/my_shift_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -170,12 +171,14 @@
                     android:textStyle="bold" />
             </RelativeLayout>
             <View
+
                 android:id="@+id/das_view3"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:visibility="gone"/>
 
             <RelativeLayout
+                android:visibility="gone"
                 android:id="@+id/vol_calander_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -238,6 +241,7 @@
                 android:layout_height="1dp"
                 android:visibility="gone"/>
             <RelativeLayout
+                android:visibility="gone"
                 android:id="@+id/swift_swap_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -277,6 +281,7 @@
                 android:visibility="gone"/>
 
             <RelativeLayout
+                android:visibility="gone"
                 android:id="@+id/client_service_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -316,6 +321,7 @@
                 android:visibility="gone"/>
 
             <RelativeLayout
+                android:visibility="gone"
                 android:id="@+id/on_duity_backup_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -349,6 +355,7 @@
                     android:textStyle="bold" />
             </RelativeLayout>
             <RelativeLayout
+
                 android:id="@+id/language_backup_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -424,6 +431,7 @@
                     android:textStyle="bold" />
             </RelativeLayout>
             <RelativeLayout
+                android:visibility="gone"
                 android:id="@+id/provide_backup_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -499,6 +507,7 @@
                     android:textStyle="bold" />
             </RelativeLayout>
             <RelativeLayout
+                android:visibility="gone"
                 android:id="@+id/resourse_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -534,6 +543,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:visibility="gone"
                 android:id="@+id/event_media_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -568,7 +578,40 @@
                     android:textStyle="bold" />
             </RelativeLayout>
             <RelativeLayout
-                android:layout_marginTop="45dp"
+                android:id="@+id/past_report_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/past_report_img2345"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/ic_launcher_background"
+                    android:visibility="gone"
+                    tools:ignore="UseAppTint"/>
+
+                <TextView
+                    android:id="@+id/past_report_text2345"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+
+                    android:layout_marginBottom="10dp"
+                    android:layout_toEndOf="@+id/past_report_img2345"
+                    android:layout_toRightOf="@+id/past_report_img2345"
+                    android:text="@string/past_report"
+                    android:textColor="@color/white"
+
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+            <RelativeLayout
                 android:id="@+id/logout_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -602,6 +645,7 @@
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </RelativeLayout>
+
             <RelativeLayout
                 android:layout_marginBottom="20dp"
                 android:id="@+id/setting_layout"
