--- a/app/src/main/res/layout/fragment_vol__home.xml
+++ b/app/src/main/res/layout/fragment_vol__home.xml
@@ -18,11 +18,35 @@
         android:background="@drawable/upper_side_custom_background"
         >
 
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/switch_avabililty"
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            app:layout_constraintHorizontal_bias="0.1"
+
+
+            app:layout_constraintTop_toTopOf="@+id/vol_home_resources"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            ></com.google.android.material.switchmaterial.SwitchMaterial>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/availability_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/unavailable"
+            app:layout_constraintTop_toBottomOf="@+id/switch_avabililty"
+            app:layout_constraintStart_toStartOf="@+id/switch_avabililty"
+            android:fontFamily="@font/avenir_heavy"
+            android:textSize="@dimen/heading_text_16sp"
+            ></androidx.appcompat.widget.AppCompatTextView>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/case_report_layout_vol_dashboard"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHeight_percent="0.1"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -32,9 +56,12 @@
             app:layout_constraintVertical_bias="0.05"
             app:layout_constraintTop_toTopOf="parent">
 
+
+
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/nhu"
                 android:layout_width="35dp"
+                android:visibility="gone"
                 android:layout_height="35dp"
 
                 app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +76,7 @@
                 android:layout_height="wrap_content"
 
 
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/nhu"
@@ -82,7 +110,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@drawable/user"
+                android:scaleType="fitXY"
+                android:tint="@color/button_theam"
 
                 ></androidx.appcompat.widget.AppCompatImageView>
 
@@ -92,7 +122,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/nhu2"
-                android:text="@string/resource"
+                android:text="@string/profile"
                 android:fontFamily="@font/avenir_heavy"
                 android:textSize="@dimen/heading_text_16sp"
 
@@ -120,7 +150,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:text="Vol Name"
+                android:text="Lena Wilson"
                 android:id="@+id/vol_name"
                 android:textStyle="bold"
                 android:fontFamily="@font/avenir_heavy"
@@ -198,8 +228,23 @@
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/vol_description_layout"
+            android:layout_marginTop="15dp"
+            app:layout_constraintWidth_percent="0.9"
+            app:layout_constraintHeight_percent="0.075"
+
+
+            ></com.google.android.material.tabs.TabLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
 
+            android:visibility="gone"
             android:id="@+id/mod_layout"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -242,11 +287,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mod_layout"
+            app:layout_constraintTop_toBottomOf="@+id/tab_layout"
 
             app:layout_constraintWidth_percent="0.9"
 
-            app:layout_constraintHeight_percent="0.6"
+            app:layout_constraintHeight_percent="0.635"
             app:cardCornerRadius="4dp"
             android:elevation="14dp"
 
@@ -260,6 +305,7 @@
                 >
 
                 <androidx.appcompat.widget.LinearLayoutCompat
+                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginTop="10dp"
@@ -287,14 +333,25 @@
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rcv_announcement_list"
+                <androidx.viewpager.widget.ViewPager
+                    android:id="@+id/viewPager"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
-                    ></androidx.recyclerview.widget.RecyclerView>
+
+
+                    >
+
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:visibility="gone"
+                        android:id="@+id/rcv_common_vol_list_data"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+
+
+                        ></androidx.recyclerview.widget.RecyclerView>
+
+                </androidx.viewpager.widget.ViewPager>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -320,7 +377,7 @@
 
 
 
-        android:src="@drawable/ic_launcher_background"
+        android:src="@drawable/user_profile_image"
 
 
 
