--- a/app/src/main/res/layout/announcement_design.xml
+++ b/app/src/main/res/layout/announcement_design.xml
@@ -6,6 +6,7 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/item_view"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="2dp"
         android:layout_width="0dp"
