--- a/app/src/main/res/layout/fragment_vol_profile_editable.xml
+++ b/app/src/main/res/layout/fragment_vol_profile_editable.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintWidth_percent="0.1"
-        app:layout_constraintHeight_percent="0.05"
+        app:layout_constraintHeight_percent="0.04"
         android:src="@drawable/ic_launcher_background"
         app:layout_constraintVertical_bias="0.03"
         app:layout_constraintHorizontal_bias="0.1"
@@ -564,7 +564,7 @@
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/additional_language_image"
 
-                            android:text="@string/phone"
+                            android:text="@string/country_of_location"
                             android:textSize="@dimen/heading_text_14sp"
                             android:fontFamily="@font/avenir_book"
                             app:layout_constraintBottom_toTopOf="@+id/additional_language_edittext"
@@ -583,7 +583,7 @@
                             android:inputType="number"
                             android:maxLines="1"
                             android:backgroundTint="@color/pink_theam"
-                            android:text="9125626628"
+                            android:text="India"
                             android:textSize="@dimen/heading_text_14sp"
                             android:fontFamily="@font/avenir_book"
 
@@ -640,7 +640,7 @@
         app:layout_constraintVertical_bias="0.035"
         app:civ_border_width="1dp"
         app:civ_border_color="@color/yellow_theam"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@drawable/user_profile_image"
         ></de.hdodenhof.circleimageview.CircleImageView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
