--- a/app/src/main/res/layout/menu_vol.xml
+++ b/app/src/main/res/layout/menu_vol.xml
@@ -36,8 +36,6 @@
 
             app:layout_constraintVertical_bias="0.5"
             app:layout_constraintWidth_percent="0.25"
-
-
             >
 
         </de.hdodenhof.circleimageview.CircleImageView>
@@ -612,6 +610,76 @@
                     android:textStyle="bold" />
             </RelativeLayout>
             <RelativeLayout
+
+                android:id="@+id/announcements_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/announcements_img2345"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/ic_launcher_background"
+                    android:visibility="gone"
+                    tools:ignore="UseAppTint"/>
+
+                <TextView
+                    android:id="@+id/announcements_text2345"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+
+                    android:layout_marginBottom="10dp"
+                    android:layout_toEndOf="@+id/announcements_img2345"
+                    android:layout_toRightOf="@+id/announcements_img2345"
+                    android:text="@string/announcements"
+                    android:textColor="@color/white"
+
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+            <RelativeLayout
+
+                android:id="@+id/setting_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/logout_img2345"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/ic_launcher_background"
+                    android:visibility="gone"
+                    tools:ignore="UseAppTint"/>
+
+                <TextView
+                    android:id="@+id/logout_text2345"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+
+                    android:layout_marginBottom="10dp"
+                    android:layout_toEndOf="@+id/logout_img2345"
+                    android:layout_toRightOf="@+id/logout_img2345"
+                    android:text="@string/setting"
+                    android:textColor="@color/white"
+
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+            <RelativeLayout
                 android:id="@+id/logout_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -646,41 +714,7 @@
                     android:textStyle="bold" />
             </RelativeLayout>
 
-            <RelativeLayout
-                android:layout_marginBottom="20dp"
-                android:id="@+id/setting_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/logout_img2345"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/ic_launcher_background"
-                    android:visibility="gone"
-                    tools:ignore="UseAppTint"/>
-
-                <TextView
-                    android:id="@+id/logout_text2345"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-
-                    android:layout_marginBottom="10dp"
-                    android:layout_toEndOf="@+id/logout_img2345"
-                    android:layout_toRightOf="@+id/logout_img2345"
-                    android:text="@string/setting"
-                    android:textColor="@color/white"
-
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-            </RelativeLayout>
         </LinearLayout>
 
     </ScrollView>
