--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="dark_white_deep">#7A7A78</color>
     <color name="dark_white">#B3B2AF</color>
     <color name="dark_white_light">#D6D5D2</color>
+    <color name="green">#4CAF50</color>
 </resources>
