--- a/app/src/main/res/layout/alert_list_view_holder.xml
+++ b/app/src/main/res/layout/alert_list_view_holder.xml
@@ -66,7 +66,7 @@
 
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/caseid_tv"
+                android:id="@+id/name_alert"
                 android:layout_width="289dp"
 
                 android:layout_height="31dp"
@@ -79,7 +79,7 @@
 
                 android:textSize="@dimen/heading_text_20sp"
 
-                app:layout_constraintBottom_toTopOf="@+id/timetv"
+                app:layout_constraintBottom_toTopOf="@+id/date_alert"
 
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -89,7 +89,7 @@
                 app:layout_constraintWidth_percent="0.7"></androidx.appcompat.widget.AppCompatTextView>
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/timetv"
+                android:id="@+id/date_alert"
                 android:layout_width="0dp"
 
 
@@ -99,10 +99,8 @@
                 android:textSize="@dimen/heading_text_16sp"
 
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/imagecase"
-                app:layout_constraintTop_toBottomOf="@+id/caseid_tv"
+                app:layout_constraintStart_toStartOf="@+id/name_alert"
+                app:layout_constraintTop_toBottomOf="@+id/name_alert"
                 app:layout_constraintWidth_percent="0.7"></androidx.appcompat.widget.AppCompatTextView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
