--- a/app/src/main/res/layout/fragment_announcements_details.xml
+++ b/app/src/main/res/layout/fragment_announcements_details.xml
@@ -18,39 +18,62 @@
         >
 
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/reporting_error"
+            app:layout_constraintStart_toStartOf="@+id/description"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.1"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/avenir_heavy"
+            android:textSize="@dimen/heading_text_18sp"
+
+            ></androidx.appcompat.widget.AppCompatTextView>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            app:layout_constraintTop_toTopOf="@+id/title"
+            app:layout_constraintBottom_toBottomOf="@+id/title"
+            app:layout_constraintHorizontal_bias="0.9"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@drawable/ic_launcher_background"
+
+            ></androidx.appcompat.widget.AppCompatImageView>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/description"
+            android:layout_width="0dp"
+            app:layout_constraintWidth_percent="0.9"
+            android:layout_height="0dp"
+
+            app:layout_constraintHeight_percent="0.325"
+            android:text="@string/raw_string"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title"
+
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/avenir_heavy"
+            android:textSize="@dimen/normal_text_12sp"
+            ></androidx.appcompat.widget.AppCompatTextView>
 
 
-        <!-- <androidx.appcompat.widget.AppCompatButton
-             android:id="@+id/short_form"
-             android:layout_width="0dp"
-             android:layout_height="0dp"
-             android:text="@string/long_form"
-             android:textColor="@color/white"
-             android:textSize="@dimen/heading_text_16sp"
-             android:background="@drawable/custom_button_pick_with_less_radious"
-             app:layout_constraintBottom_toBottomOf="parent"
-             app:layout_constraintEnd_toEndOf="parent"
-             app:layout_constraintHeight_percent="0.075"
-             app:layout_constraintStart_toStartOf="parent"
-             app:layout_constraintTop_toTopOf="parent"
-             app:layout_constraintWidth_percent="0.75"></androidx.appcompat.widget.AppCompatButton>
-         <androidx.appcompat.widget.AppCompatButton
-             android:id="@+id/long_form"
-             android:layout_width="0dp"
-             android:layout_height="0dp"
-             android:text="@string/short_form"
-             android:textColor="@color/white"
-             android:textSize="@dimen/heading_text_16sp"
-             android:background="@drawable/custom_button_pick_with_less_radious"
-             app:layout_constraintBottom_toBottomOf="parent"
-             app:layout_constraintEnd_toEndOf="parent"
-             app:layout_constraintHeight_percent="0.075"
-             app:layout_constraintStart_toStartOf="parent"
-             app:layout_constraintTop_toTopOf="parent"
-             app:layout_constraintVertical_bias="0.385"
-             app:layout_constraintWidth_percent="0.75"></androidx.appcompat.widget.AppCompatButton>-->
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="@id/description"
+            app:layout_constraintTop_toBottomOf="@+id/description"
 
-
+            android:src="@drawable/ic_launcher_background"
+            app:layout_constraintWidth_percent="0.9"
+            app:layout_constraintHeight_percent="0.5"
+            android:layout_marginTop="20dp"
+            android:scaleType="fitXY"
+            ></androidx.appcompat.widget.AppCompatImageView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -61,8 +84,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.15"
-        android:text="@string/announcements"
+        app:layout_constraintHorizontal_bias="0.3"
+        android:text="@string/admin_notes"
         android:textSize="@dimen/heading_text_30sp"
         android:fontFamily="@font/avenir_heavy"
         app:layout_constraintVertical_bias="0.05"
@@ -71,13 +94,14 @@
         ></androidx.appcompat.widget.AppCompatTextView>
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="25dp"
+
         android:layout_height="25dp"
         android:scaleType="fitXY"
         android:src="@drawable/ic_launcher_background"
         app:layout_constraintBottom_toBottomOf="@+id/announcements_text_heading"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.1"
-        app:layout_constraintHorizontal_bias="0.951"
+        app:layout_constraintHorizontal_bias="0.075"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/announcements_text_heading"
         app:layout_constraintWidth_percent="0.2"></androidx.appcompat.widget.AppCompatImageView>
