--- a/app/src/main/res/layout/advocacy_level.xml
+++ b/app/src/main/res/layout/advocacy_level.xml
@@ -79,10 +79,60 @@
 
 
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/silver"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:orientation="vertical"
+                android:text="@string/silver"
+                android:textSize="@dimen/heading_text_18sp"
+                android:fontFamily="@font/avenir_heavy"
+                app:layout_constraintStart_toStartOf="@+id/webViewContainer"
+                app:layout_constraintTop_toBottomOf="@+id/webViewContainer">
+
+            </androidx.appcompat.widget.AppCompatTextView>
+
+
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/gold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:orientation="vertical"
+                android:text="@string/gold"
+                android:textSize="@dimen/heading_text_18sp"
+                android:fontFamily="@font/avenir_heavy"
+                app:layout_constraintStart_toStartOf="@+id/silver"
+                app:layout_constraintTop_toBottomOf="@+id/silver">
+
+            </androidx.appcompat.widget.AppCompatTextView>
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/platinum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:orientation="vertical"
+                android:text="@string/platinum"
+                android:textSize="@dimen/heading_text_18sp"
+                android:fontFamily="@font/avenir_heavy"
+                app:layout_constraintStart_toStartOf="@+id/gold"
+                app:layout_constraintTop_toBottomOf="@+id/gold">
+
+            </androidx.appcompat.widget.AppCompatTextView>
+
             <View
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                app:layout_constraintTop_toBottomOf="@+id/webViewContainer"
+                android:layout_height="20dp"
+                app:layout_constraintStart_toStartOf="@+id/platinum"
+                app:layout_constraintTop_toBottomOf="@+id/platinum"
                 ></View>
 
             <androidx.cardview.widget.CardView
