--- a/app/src/main/res/drawable/custom_border_on_duity.xml
+++ b/app/src/main/res/drawable/custom_border_on_duity.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
-    <stroke android:width="1dp" android:color="@color/dark_white"></stroke>
+    <stroke android:width="1dp" android:color="@color/dark_green"></stroke>
     <corners android:radius="14dp"></corners>
+    <solid android:color="@color/green"></solid>
 
 
 </shape>
