--- a/app/src/main/res/layout/fragment_vol__home.xml
+++ b/app/src/main/res/layout/fragment_vol__home.xml
@@ -110,9 +110,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/user"
+                android:src="@drawable/ic_launcher_background"
                 android:scaleType="fitXY"
-                android:tint="@color/button_theam"
+
 
                 ></androidx.appcompat.widget.AppCompatImageView>
 
@@ -122,7 +122,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/nhu2"
-                android:text="@string/profile"
+                android:text="@string/case_report"
                 android:fontFamily="@font/avenir_heavy"
                 android:textSize="@dimen/heading_text_16sp"
 
@@ -246,6 +246,7 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
+            android:visibility="gone"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -254,12 +255,9 @@
             android:layout_marginTop="15dp"
             app:layout_constraintWidth_percent="0.9"
             app:layout_constraintHeight_percent="0.075"
-
-
             ></com.google.android.material.tabs.TabLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
 
-            android:visibility="gone"
             android:id="@+id/mod_layout"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -302,7 +300,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tab_layout"
+            app:layout_constraintTop_toBottomOf="@+id/mod_layout"
 
             app:layout_constraintWidth_percent="0.9"
 
@@ -348,17 +346,11 @@
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
-                <androidx.viewpager.widget.ViewPager
-                    android:id="@+id/viewPager"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
 
-
-                    >
 
 
                     <androidx.recyclerview.widget.RecyclerView
-                        android:visibility="gone"
+
                         android:id="@+id/rcv_common_vol_list_data"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -366,7 +358,7 @@
 
                         ></androidx.recyclerview.widget.RecyclerView>
 
-                </androidx.viewpager.widget.ViewPager>
+
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -392,7 +384,34 @@
         ></de.hdodenhof.circleimageview.CircleImageView>
 
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
 
+
+        app:layout_constraintWidth_percent="0.25"
+        app:layout_constraintHeight_percent="0.05"
+        android:background="@drawable/custom_border_on_duity"
+
+        app:layout_constraintVertical_bias="0.045"
+        app:layout_constraintHorizontal_bias="0.95"
+
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:text="On Duity"
+            android:gravity="center"
+            android:textColor="@color/white"
+            ></androidx.appcompat.widget.AppCompatTextView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
