--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="dark_white">#B3B2AF</color>
     <color name="dark_white_light">#D6D5D2</color>
     <color name="green">#4CAF50</color>
+    <color name="dark_green">#065C09</color>
 </resources>
